--- a/Server/Views/content/register.ejs
+++ b/Server/Views/content/register.ejs
@@ -33,7 +33,7 @@
 
         <form method="POST" id="registerForm" novalidate>
           <p class="hint-text">
-            Create your own account. It's free and only takes a minute.
+            Create your account.
           </p>
 
           <div class="form-group">
