adjusted edit profile

--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -38,11 +38,18 @@
             </li>            
             <li class="nav-item">
               <% if(page=='appointments') { %>
-                <a class="nav-link active" href="/appointment/appointments"><i class="fa-regular fa-calendar-check"></i> Book Appointment</a>
+                <a class="nav-link active" href="/appointment/appointments/"><i class="fa-regular fa-calendar-check"></i> Book Appointment</a>
               <% } else { %> 
-                <a class="nav-link" href="/appointment/appointments"><i class="fa-regular fa-calendar-check"></i> Book Appointment</a>
+                <a class="nav-link" href="/appointment/appointments/"><i class="fa-regular fa-calendar-check"></i> Book Appointment</a>
               <% } %>
             </li>
+            <!-- <li class="nav-item">
+              <% if(page=='appointments') { %>
+                <a class="nav-link active" href="/profile/profile/"><i class="fa-regular fa-calendar-check"></i> Complete Profile</a>
+              <% } else { %> 
+                <a class="nav-link" href="/profile/profile/"><i class="fa-regular fa-calendar-check"></i> Complete Profile</a>
+              <% } %>
+            </li> -->
           <% } %>
 
           <li class="nav-item">
