--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -69,6 +69,14 @@
           </li>
 
           <li class="nav-item">
+            <% if(page=='services') { %>
+              <a class="nav-link active" href="/services"><i class="fa-solid fa-tooth fa-lg"></i> Services</a>
+            <% } else { %> 
+              <a class="nav-link" href="/services"><i class="fa-solid fa-tooth fa-lg"></i> Services</a>
+            <% } %>
+            </li>
+
+          <li class="nav-item">
           <% if(page=='contact') { %>
             <a class="nav-link active" href="/contact"><i class="fa-solid fa-envelopes-bulk fa-lg"></i> Contact</a>
           <% } else { %> 
