--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -42,7 +42,7 @@
             </div>
             <img class="img-fluid" src="../public/Smile.jpg" alt="..." />
         </div>
-    </section><section class="projects-section bg-light" id="projects">
+    </section><section class="projects-section bg-light " id="projects">
         <div class="container px-4 px-lg-5">
             
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
@@ -109,7 +109,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="#!">Multiple Locations</a></div>
+                            <div class="small text-black-50"><a href="/contact">Multiple Locations</a></div>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                             <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                            <div class="small text-black-50"><a href="/login">Comp231@my.centennialcollege.ca</a></div>
                         </div>
                     </div>
                 </div>
