--- a/Server/Views/dentist/dentists.ejs
+++ b/Server/Views/dentist/dentists.ejs
@@ -40,13 +40,10 @@
                   <tr>                     
                     
                     <th class="text-center">Dentist Name</th>
-                    <th class="text-center">Start Date</th>
-                    <th class="text-center">End Date</th>                  
-                    <% if(!displayName) { %>                 
-                    <th class="text-center"></th>
-                    <% } %>   
-                    <%  if(displayName) { %>                       
-                      <th class="text-center">Status</th>
+                    <th class="text-center">Specialty</th>
+                    <th class="text-center">Province</th>                  
+                    <th class="text-center">Country</th>                                      
+                    <%  if(displayName) { %>             
                       <th class="text-center"></th>     
                       <th class="text-center"></th>
                       <th class="text-center"></th>
@@ -56,9 +53,9 @@
                   </thead>
                   <tbody>
                   <!-- Template Row -->
-                  <% for (let count = 0; count < surveys.length; count++) { %>
+                  <% for (let count = 0; count < dentists.length; count++) { %>
                   <tr>
-                    <td><%= surveys[count].Name %></td>               
+                    <td><%= dentists[count].Name %></td>               
                     <td class="text-center" data-toggle="popover" title="<%= getFormatDate(surveys[count].Start_Date, true) %>"><%= getFormatDate(surveys[count].Start_Date) %></td>
                     <td class="text-center" data-toggle="popover" title="<%= getFormatDate(surveys[count].End_Date, true) %>" ><%= getFormatDate(surveys[count].End_Date) %></td>
                     <% if(displayName) { %>                           
