--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -50,13 +50,13 @@
                 <a class="nav-link" href="/profile/profile/"><i class="fa-regular fa-calendar-check"></i> Complete Profile</a>
               <% } %>
             </li> -->
-          <% } %>
+          <% } %>          
         
           <li class="nav-item">
           <% if(page=='dentist') { %>
-            <a class="nav-link active" href="/dentist"><i class="fas fa-book fa-lg"></i> Dentists List</a>
+            <a class="nav-link active" href="/dentist"><i class="fas fa-book fa-lg"></i> <% if (displayName == "admin admin") { %> Users List <% } else { %> Users Lst <% } %></a>
           <% } else { %> 
-            <a class="nav-link" href="/dentist"><i class="fas fa-book fa-lg"></i> Dentists List</a>
+            <a class="nav-link" href="/dentist"><i class="fas fa-book fa-lg"></i>  <% if (displayName == "admin admin") { %> Users List <% } else { %> Users Lst <% } %></a>
           <% } %>
           </li>
 
